# gsheet-pandas

./: .gitignore  LICENSE  pypi-update.py  pyproject.toml  readme.md  requirements.txt  setup.py  tests.py  tests_async.py
.github/workflows/: cd.yml  main.yml  test.yml
gsheet-pandas/: __init__.py  connection.py  test.py
gsheet_pandas/: __init__.py  test.py  tests.py  tests_async.py  utils.py
gsheet_pandas/adapter/: connection.py
gsheet_pandas/asyncio/: __init__.py
gsheet_pandas/asyncio/adapter/: connection.py
