[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gsheet-pandas"
version = "0.3.0"
description = "Download and upload pandas dataframes to the Google sheets"
authors = ["Iakov Kaiumov <yashahelfi2012@gmail.com>"]
readme = "readme.md"
license = "MIT"
packages = [{include = "gsheet_pandas"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
google-api-python-client = "^2.101.0"
google-auth-httplib2 = "^0.1.1"
google-auth-oauthlib = "^1.1.0"
pandas = "^2.1.1"
python-dotenv = "^1.0.0"
aiogoogle = "^5.2.0"
aiohttp = "^3.9.0"
